--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 #database
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot_thymeleaf?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/small_tigers?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=920722lhb
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.cn.lhb.small_tigers.domain
+
+#иообнд
+#server.servlet.context-path=/thymeleaf
 
 #thymeleaf
 spring.thymeleaf.mode=LEGACYHTML5
